<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ru.kn_n.sevenwindscoffee.utils.widgets.EditTextWidget
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:layout_marginHorizontal="@dimen/dimen_18"
        app:errorText="@string/empty_field"
        app:hintText="@string/hint_mail"
        app:label="@string/e_mail"
        app:typeInputText="32" />

    <ru.kn_n.sevenwindscoffee.utils.widgets.EditTextWidget
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_24"
        app:errorText="@string/empty_field"
        app:hintText="@string/hint_password"
        app:label="@string/password"
        app:typeInputText="128" />

    <ru.kn_n.sevenwindscoffee.utils.widgets.EditTextWidget
        android:id="@+id/password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_24"
        app:errorText="@string/passwords_dont_match"
        app:hintText="@string/hint_password"
        app:label="@string/password_repeat"
        app:typeInputText="128" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_47"
        android:layout_below="@id/password_repeat"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/reg" />

    <TextView
        android:id="@+id/to_log_in"
        style="@style/TextRegular.CardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_12"
        android:gravity="center"
        android:text="@string/already_have_acc" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brown_t50"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressTint="@color/brown_3"/>
    </FrameLayout>

</RelativeLayout>