<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ru.kn_n.sevenwindscoffee.utils.widgets.EditTextWidget
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:typeInputText="32"
        android:layout_above="@id/password"
        android:layout_marginHorizontal="@dimen/dimen_18"
        app:hintText="@string/hint_mail"
        app:label="@string/e_mail"
        app:errorText="@string/login_error"/>

    <ru.kn_n.sevenwindscoffee.utils.widgets.EditTextWidget
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_24"
        app:hintText="@string/hint_password"
        app:label="@string/password"
        app:errorText="@string/login_error"
        app:typeInputText="128" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_47"
        android:text="@string/log_in"/>

    <TextView
        android:id="@+id/to_reg"
        style="@style/TextRegular.CardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_18"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_below="@id/log_in"
        android:text="@string/registration"/>

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brown_t50"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressTint="@color/brown_3"/>
    </FrameLayout>

</RelativeLayout>